--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-chirpy
 title: YooshTN's homepage
 description: Testing out github pages before deployment of actual student/professional site.
